# AmazonAffiliateNotifications

./: Dockerfile  README.md  pyproject.toml
amazonaffiliatenotifications/: amazon.py  calculate.py  commissions.json  main.py
